<resources>
    <string name="app_name">BanKApp</string>
    <string name="connection">Se Connecter</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="compte">Numero de compte:</string>
    <string name="ref">Reference:</string>
    <string name="solde">Solde:</string>
    <string name="montant">Montant:</string>
    <string name="date">Date:</string>
    <string name="desc">Description:</string>
    <string name="title_activity_maps">Map</string>
    <string name="display">Display</string>
    <string name="call">Call</string>
    <string name="disconnect">Disconnect</string>
    <string name="show">Show</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
</resources>