<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AuthenticationActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/bank_logo"
        android:padding="10dp"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:text="@string/login" />

        <EditText
            android:id="@+id/username"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="25dp"
            android:hint="@string/username"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <CheckBox
            android:id="@+id/showPassword"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="70dp"
            android:checked="false"
            android:text="@string/show" />

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="#ffa500"
        android:text="@string/connection" />

</LinearLayout>